versions/v4.1.0/doxygen/html/realtek-gpio_8h.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/realtek-gpio_8h.html
original_path: doxygen/html/realtek-gpio_8h.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

realtek-gpio.h File Reference

[Go to the source code of this file.](realtek-gpio_8h_source.md)

| Macros | |
| --- | --- |
| #define | [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)   11 |
| #define | [RTS5912\_GPIO\_VOLTAGE\_MASK](#a9ab90e903840aec5172596492f12e6b5)   (3U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
| #define | [RTS5912\_GPIO\_VOLTAGE\_DEFAULT](#a91e7d587b96806b3f8403d3532d5a888)   (0U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
|  | Set pin at the default voltage level. |
| #define | [RTS5912\_GPIO\_VOLTAGE\_1V8](#a83d8d0f0a827e770de9fe360fe566573)   (1U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
|  | Set pin voltage level at 1.8 V. |
| #define | [RTS5912\_GPIO\_VOLTAGE\_3V3](#a24268d0667f7a2266e519c03e6a04395)   (2U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
|  | Set pin voltage level at 3.3 V. |
| #define | [RTS5912\_GPIO\_VOLTAGE\_5V0](#a0ca327e5b979185b539f187eabcbc0be)   (3U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
|  | Set pin voltage level at 5.0 V. |

## Macro Definition Documentation

## [◆ ](#a83d8d0f0a827e770de9fe360fe566573)RTS5912\_GPIO\_VOLTAGE\_1V8

| #define RTS5912\_GPIO\_VOLTAGE\_1V8   (1U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
| --- |

Set pin voltage level at 1.8 V.

## [◆ ](#a24268d0667f7a2266e519c03e6a04395)RTS5912\_GPIO\_VOLTAGE\_3V3

| #define RTS5912\_GPIO\_VOLTAGE\_3V3   (2U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
| --- |

Set pin voltage level at 3.3 V.

## [◆ ](#a0ca327e5b979185b539f187eabcbc0be)RTS5912\_GPIO\_VOLTAGE\_5V0

| #define RTS5912\_GPIO\_VOLTAGE\_5V0   (3U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
| --- |

Set pin voltage level at 5.0 V.

## [◆ ](#a91e7d587b96806b3f8403d3532d5a888)RTS5912\_GPIO\_VOLTAGE\_DEFAULT

| #define RTS5912\_GPIO\_VOLTAGE\_DEFAULT   (0U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
| --- |

Set pin at the default voltage level.

## [◆ ](#a9ab90e903840aec5172596492f12e6b5)RTS5912\_GPIO\_VOLTAGE\_MASK

| #define RTS5912\_GPIO\_VOLTAGE\_MASK   (3U << [RTS5912\_GPIO\_VOLTAGE\_POS](#a0381dff71143b0fadceaaade950340a3)) |
| --- |

## [◆ ](#a0381dff71143b0fadceaaade950340a3)RTS5912\_GPIO\_VOLTAGE\_POS

| #define RTS5912\_GPIO\_VOLTAGE\_POS   11 |
| --- |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [gpio](dir_9486826309e816a7a1c2256ae23b5ea4.md)
- [realtek-gpio.h](realtek-gpio_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
